--- a/style.css
+++ b/style.css
@@ -8,16 +8,17 @@ body{
 #loggo{
     display: flex;
 }
-nav>a :hover{
-    margin left: 10px:
-    text text-decoration: none;
-    padding: 10px:
-    border radius: 5px:
+nav>:hover{
+    margin-left: 10px;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 5px;
 }
 #topbar{
     display: flex;
     justify-content: space-between;
     justify-content: center;
     font-size: 24px;
-    link text-decoration: none;
 }
+
+
