--- a/style.css
+++ b/style.css
@@ -8,17 +8,56 @@ body{
 #loggo{
     display: flex;
 }
-nav>:hover{
-    margin-left: 10px;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 5px;
-}
+
 #topbar{
     display: flex;
     justify-content: space-between;
     justify-content: center;
     font-size: 24px;
+    margin-left: 10px;
+    padding: 10px;
 }
 
+nav>:hover {
+    color: grey;
+    text-decoration: wavy;
+    border-radius: 5px;
+}
 
+a
+{
+    color: white;
+    text-decoration: none;
+    padding-right: 20px;
+}
+
+#info{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    font-size: 26px;
+    color: darkgray;
+}
+
+#info2{
+    display: flex;
+    justify-content: center;
+    color: darkgrey;
+    font-size: 20px;
+}
+
+#boxgrey {
+    width: 1000px;
+    height: 700px;
+    background-color: lightgrey;
+    display: flex; 
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    justify-content: center;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    padding-top: 70px;
+    
+}
